# video-trimmer

./: .gitignore  README.md  pyproject.toml
scripts/: video-trimmer.sh
src/video_trimmer/: __init__.py  cli.py  core.py  uploader.py
tests/: conftest.py  test_cli.py  test_core.py  test_uploader.py
